--- a/Camera/Base.lproj/LaunchScreen.storyboard
+++ b/Camera/Base.lproj/LaunchScreen.storyboard
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9060" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="01J-lp-oVM">
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
     </dependencies>
     <scenes>
@@ -13,15 +14,85 @@
                         <viewControllerLayoutGuide type="bottom" id="xb3-aO-Qok"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view alpha="0.10000000000000001" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HLS-sB-eCR">
+                                <rect key="frame" x="148" y="545" width="79" height="79"/>
+                                <subviews>
+                                    <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" fixedFrame="YES" image="recordbutton" translatesAutoresizingMaskIntoConstraints="NO" id="faY-Sw-yxG">
+                                        <rect key="frame" x="0.0" y="0.0" width="79" height="79"/>
+                                        <animations/>
+                                    </imageView>
+                                </subviews>
+                                <animations/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="79" id="7Se-I5-yYk"/>
+                                    <constraint firstAttribute="height" constant="79" id="X3x-yh-O3i"/>
+                                </constraints>
+                            </view>
+                            <button opaque="NO" alpha="0.10000000000000001" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TDq-wE-gcP">
+                                <rect key="frame" x="0.0" y="545" width="148" height="79"/>
+                                <animations/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="79" id="6wr-6Y-xdb"/>
+                                    <constraint firstAttribute="height" constant="79" id="Xcy-Pp-mY4"/>
+                                    <constraint firstAttribute="width" constant="148" id="uZj-zN-brl"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="42"/>
+                                <state key="normal" title="🙎">
+                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="Xcy-Pp-mY4"/>
+                                    </mask>
+                                </variation>
+                            </button>
+                            <button opaque="NO" alpha="0.10000000000000001" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SJw-HR-dag">
+                                <rect key="frame" x="227" y="544" width="148" height="80"/>
+                                <animations/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="80" id="Hac-Ev-xPN"/>
+                                    <constraint firstAttribute="height" constant="80" id="Qem-5h-xx4"/>
+                                    <constraint firstAttribute="width" constant="148" id="ZgS-Vi-LUU"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="42"/>
+                                <state key="normal" title="👉">
+                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <state key="disabled">
+                                    <color key="titleColor" red="0.99989169840000003" green="1" blue="0.99988096950000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="Hac-Ev-xPN"/>
+                                    </mask>
+                                </variation>
+                            </button>
+                        </subviews>
                         <animations/>
-                        <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" red="0.19605264067649841" green="0.19609326124191284" blue="0.19605004787445068" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="SJw-HR-dag" firstAttribute="leading" secondItem="HLS-sB-eCR" secondAttribute="trailing" id="2FU-Xe-Jje"/>
+                            <constraint firstItem="TDq-wE-gcP" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="2Tv-Ec-C5w"/>
+                            <constraint firstAttribute="trailing" secondItem="SJw-HR-dag" secondAttribute="trailing" id="Bcd-Pa-Ab1"/>
+                            <constraint firstItem="HLS-sB-eCR" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="D0s-XX-vCZ"/>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="TDq-wE-gcP" secondAttribute="bottom" constant="43" id="MwB-Ba-23F"/>
+                            <constraint firstItem="HLS-sB-eCR" firstAttribute="leading" secondItem="TDq-wE-gcP" secondAttribute="trailing" id="UGM-Xh-If8"/>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="HLS-sB-eCR" secondAttribute="bottom" constant="43" id="hRQ-zG-Pfk"/>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="SJw-HR-dag" secondAttribute="bottom" constant="43" id="hqw-wj-sWL"/>
+                        </constraints>
                     </view>
+                    <nil key="simulatedStatusBarMetrics"/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="53" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="recordbutton" width="79" height="79"/>
+    </resources>
 </document>
