--- a/Camera/Base.lproj/LaunchScreen.storyboard
+++ b/Camera/Base.lproj/LaunchScreen.storyboard
@@ -17,10 +17,10 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view alpha="0.10000000000000001" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HLS-sB-eCR">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HLS-sB-eCR">
                                 <rect key="frame" x="148" y="545" width="79" height="79"/>
                                 <subviews>
-                                    <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" fixedFrame="YES" image="recordbutton" translatesAutoresizingMaskIntoConstraints="NO" id="faY-Sw-yxG">
+                                    <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" alpha="0.20000000000000001" contentMode="center" fixedFrame="YES" image="recordbutton" translatesAutoresizingMaskIntoConstraints="NO" id="faY-Sw-yxG">
                                         <rect key="frame" x="0.0" y="0.0" width="79" height="79"/>
                                         <animations/>
                                     </imageView>
@@ -31,7 +31,7 @@
                                     <constraint firstAttribute="height" constant="79" id="X3x-yh-O3i"/>
                                 </constraints>
                             </view>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TDq-wE-gcP">
+                            <button opaque="NO" alpha="0.20000000000000001" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TDq-wE-gcP">
                                 <rect key="frame" x="31" y="552" width="86" height="64"/>
                                 <animations/>
                                 <constraints>
@@ -49,7 +49,7 @@
                                     </mask>
                                 </variation>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SJw-HR-dag">
+                            <button opaque="NO" alpha="0.20000000000000001" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SJw-HR-dag">
                                 <rect key="frame" x="258" y="552" width="86" height="64"/>
                                 <animations/>
                                 <constraints>
